# nexdesk-triage

./: .dockerignore  .gitignore  .huggingfaceignore  COMPREHENSIVE_DOCUMENTATION.md  LICENSE  README.md  apply_advanced.py  demo_innovation.py  docker-compose.yml  files-2.code-workspace  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rich_inference.py
connectors/: __init__.py  jira_connector.py  servicenow_connector.py
dashboard/: app.js  index.html  styles.css
documents/: architecture.md  concept.md  future_enhancements.md  hld.md  lld.md  pov_tech_lead.md  synopsis.md
server/: __init__.py  app.py  automation.py  environment.py  flagging.py  graders.py  knowledge_base.py  metrics.py  multi_agent.py  ticket_generator.py
server/innovation/: __init__.py  discovery.py  iteration.py  notifier.py
tests/: test_score_ranges.py
